--- a/Servlet/servlet_project1/src/main/webapp/web.xml
+++ b/Servlet/servlet_project1/src/main/webapp/web.xml
@@ -9,4 +9,13 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  <!-- 한글 깨짐 방지 -->
+  <filter>
+  	<filter-name>EncodingFilter</filter-name>
+  	<filter-class>kr.kh.app.filter.EncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>EncodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
