--- a/Servlet/servlet_project1/src/main/webapp/web.xml
+++ b/Servlet/servlet_project1/src/main/webapp/web.xml
@@ -15,6 +15,7 @@
   	<filter-class>kr.kh.app.filter.EncodingFilter</filter-class>
   </filter>
   <filter-mapping>
+  	<!-- 모든 url에 대해 encodingfilter를 적용시킴 -->
   	<filter-name>EncodingFilter</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
