--- a/React/music/package.json
+++ b/React/music/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "post",
+  "name": "music",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
